<resources>
    <string name="app_name">merchandisemot</string>
    <string name="text_username">Tên đăng nhập</string>
    <string name="text_password">Mật khẩu</string>
    <string name="text_login">Đăng nhập</string>
    <string name="text_username_null">Tên đăng nhập không được để trống!</string>
    <string name="text_password_null">Mật khẩu không được để trống</string>
    <string name="text_sweet_dialog_title">Thông báo</string>
    <string name="text_ok">OK</string>
    <string name="text_progress_dialog">Loding...</string>
    <string name="permission_setting">Cài đặt</string>
    <string name="permission_close">Close</string>
    <string name="permission_confirm">Confirm</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="text_home">Trang chủ</string>
    <string name="text_upload_all_data">Tải dữ liệu lên server</string>
    <string name="text_setting">Thiết lập và hướng dẫn</string>
    <string name="text_change_password">Đổi mật khẩu</string>
    <string name="text_logout">Đăng xuất</string>
    <string name="text_info_product">Thông tin hàng hóa</string>
    <string name="text_info_market">Thông tin thị trường</string>
    <string name="text_notification">Thông báo</string>
    <string name="text_timekeeping">Chấm công</string>
    <string name="text_capture_exhibition">Chụp hình trưng bày</string>
    <string name="text_stock">Cập nhật kho</string>
    <string name="text_product_hvb">Sản phẩm HVB</string>
    <string name="text_product_rival">Sản phẩm đối thủ</string>
    <string name="text_comment">Nhận xét - Ý kiến</string>
    <string name="text_time">Giờ</string>
    <string name="txt_type">Loại</string>
    <string name="text_location">Tọa độ</string>
    <string name="text_comma">,</string>
    <string name="text_attendance_success_and_capture">Chấm công thành công, vui lòng bấm tiếp tục để chụp hình</string>
    <string name="text_continue">Tiếp tục</string>
    <string name="text_location_null">Chưa lấy được vị trí!</string>

</resources>
