<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/distance_10dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/distance_10dp"
                android:layout_marginTop="@dimen/distance_10dp"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_logo" />


            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edittext_stroke_gray"
                android:hint="@string/text_username"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/distance_10dp"
                android:singleLine="true" />


            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45dp"
                android:layout_marginTop="@dimen/distance_10dp"
                android:background="@drawable/bg_edittext_stroke_gray"
                android:hint="@string/text_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/distance_10dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_45dp"
                android:layout_marginEnd="@dimen/distance_20dp"
                android:layout_marginStart="@dimen/distance_20dp"
                android:layout_marginTop="@dimen/distance_10dp"
                android:background="@drawable/bg_button_green"
                android:text="@string/text_login"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
